# consoleEngine

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
include/engine/: color.hpp  constants.hpp  debug.hpp  engine.hpp  input.hpp
include/math/: math.hpp
include/math/matrix/: mat2f.hpp  mat3f.hpp  mat4f.hpp
include/math/vector/: vec2f.hpp  vec2i.hpp  vec3f.hpp  vec4f.hpp
include/rendering/camera/: camera.hpp  cameraType.hpp  orthographic.hpp  perspective.hpp
include/rendering/data/: model.hpp  triangle.hpp  vertex.hpp
include/scenes/: modelRendererScene.hpp  raycasterScene.hpp  scene.hpp
src/: main.cpp
src/engine/: debug.cpp  graphics.cpp  input.cpp  mainLoop.cpp  pipeline.cpp  rendering.cpp  stage.cpp  tests.cpp
src/math/: math.cpp
src/math/matrix/: mat2f.cpp  mat3f.cpp  mat4f.cpp
src/math/vector/: vec2f.cpp  vec2i.cpp  vec3f.cpp  vec4f.cpp
src/rendering/: model.cpp
src/rendering/camera/: orthographic.cpp  perspective.cpp
src/rendering/data/: triangle.cpp
src/scenes/: modelRendererScene.cpp  raycasterScene.cpp
